@@ -1,3 +1,8 @@
+2010-05-21  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/43949
+	* g++.dg/warn/Warray-bounds-5.C: New testcase.
+
 2010-05-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/44178
